--- a/main.html
+++ b/main.html
@@ -4,6 +4,22 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	 <style>
+        .holder {
+            display: grid;
+            grid-template-columns: 100px 100px;
+            grid-template-rows:100px 100px;
+            width: 200px;
+            height: 200px;
+            border: 1px solid black;
+        }
+
+        .item {
+            background-color: #f0f0f0;
+            border: 1px solid #ddd;
+        }
+    </style>
+
 </head>
 
 <body>
